[project]
name = "mcp-couchbase"
version = "0.1.0"
description = "Couchbase MCP Server - The Developer Data Platform for Critical Applications in Our AI World"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"

dependencies = [
    "couchbase>=4.3.5",
    "mcp[cli]>=1.5.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Couchbase-Ecosystem/mcp-server-couchbase"
Documentation = "https://github.com/Couchbase-Ecosystem/mcp-server-couchbase#readme"
Issues = "https://github.com/Couchbase-Ecosystem/mcp-server-couchbase/issues"
